# frisbee-fetch-robot

frisbee_detector/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
frisbee_detector/config/: frisbee_detector.yaml
frisbee_detector/frisbee_detector/: frisbee_detector_node.py
frisbee_detector/include/frisbee_detector/: detector_core.hpp  detector_node.hpp
frisbee_detector/src/: detector_core.cpp  frisbee_detector_node.cpp
